--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
 
+<html>
+    <head>
+        <title>test</title>
+    </head>
+
+    <body>
+        <nav>
+            <a href="idk.html">idk</a>
+        </nav>
+    </body>
+</html>
