--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <nav>
-            <a href="index2.html">idk</a>
+            <a href="index2">idk</a>
         </nav>
     </body>
 </html>
