--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 
 <html>
     <head>
-        <title>test</title>
+        <title>Home</title>
+        <link rel="icon" href="https://lh3.googleusercontent.com/J6wX_0tMGXaptQlJSb3QhSN6YeABQslJJSNM8SIyTP_4ePpvzqZAMaT3-3nsdhkre9Q22xZJ5fEwBsL3MqJbx3-yaf7Rnc263TuT4B5wkgbwAFtpSvhYEjVrA20OQvej4ys0curd5kOngHbIqbhyLfN1SiybYP6sgJgThyZCG_dgKWQR2w7XpZYUDyr6sQR39TpW2m06RkJTjrfz8hTMkmuUM-6qiiCDquD38iFp5Ag-JM4X23IhquvRf4FNv3G4uBP-JFY4GK_-kXU4PrV5KNJ4Yg0IOFxXUUTN7yu2npUVUjtQpT-OhgFGqDGrtEu5sgJOrsRe-xe_8bdos66F4TyLX-a-qzHmsI4yd5RCPiyjgm3X1tcaMyyW3PdzWXexrjISWP4Kv3YhLsuNUJ_UCiMFr1BxDyjcNMPAWat1YYbxuzHUpaSGtzSyiksfBiZA19J05k-i3mgxVqv6hSuXmDG4jiMiwJKpueuncKNThai1TBDL0DsFPyIKrI216VTY6_MCkCW-A1_TaDgpQbkeEv6dOVTQhN9vVLPdBPx_qpzPgYhadD30YEp88GgodgED7vaFxX7cgpnUqnQcdgBI4qSkUIneg-wZvo5oQCXawIgi4OShZGQuuCFZlN0IARhkD5SWa6vc_pIuo1eW2y4E3MCUX3lFPTh8ZDYaWCv5p3kT6Co0ZzNYCIEcoj6H9G9rWpELmgJM7XqMzzEUtD8N4ts6CFUsGXCS0mf4l7X05a-fcbxMn2WQknfwtNM5ybY4WDJ89QTpXsdqK2Uj46svzQ6Yx81kFbMkQ8_k9OXZG4xfiIMNuv-7vKMn-WtIn-GzYNLKMj27FF3v6rHzmF9CJ6VkzEhQ5vqv4PDBOlTk9ZwZwOmdrlia-2PCEPZoFfmnpEk4JiJLtUY=w612-h306-no?authuser=0" />
     </head>
 
     <body>
         <nav>
-            <a href="index2">idk</a>
+            <a href="Library">idk</a>
         </nav>
     </body>
 </html>
