--- a/index.html
+++ b/index.html
@@ -8,7 +8,40 @@
 
     <body>
         <nav>
-            <a href="Library">idk</a>
+            <a href="index" style="position: relative; left: 2.5%;">Home</a>
+            <a href="Library" style="position: relative; left: 10%;">Library</a>
         </nav>
+
+        <img class="bac-img" src="https://lh3.googleusercontent.com/FF76kECRV_oaAJKSwNq_WD9mg1mlFiGgKkUCR5xxwXUZndXstpoO75Q1p_Sx-78kPj7YmSY2m8pVuKOOMkiphSVIYnN2jRRjYNnGQjQ_KlnlI8QhFf5vOqu2QroDOe5ylgTy-PQx9fwMQnNcAQB2qMfRMzDObxy_fXrP2xtOt1kVji-xzZUCV0JelKlijk3uI3srNL832ZGy3qihQ1pBeF0Zi8SGq_D1lPZMLPnibVLsAb_LkXGlOWTF9q6QxR2av8d3Owx7ZCPIgOYkYk1y06_Ab4hpWOpQbrCAvPtm7aDmanYSXtbR-x4JeuMd9FDOcZV0n4FA2-GIXwQ7A0h5ipYT_xsTMCEYXw8wA85MhWZTDERUS_QY31lzZfKI4JQ8SBw-KJDbW6lBwMDMW8rLBP_a9OosvTJ5LjR7Bb99eo8Tg9xY0QPu_oxUc4UqDGNMHBCuFmGzPFK5kfmA2w8tscd94YXkTC_Ewl2yIKjfpAePPNBn2CVTUcBMOzrJJF58L12_5UUDJNUeLQ7NaIVIGOc9gsNGw7ZKxL7hHnwwDldyeE8oAhvW16rNORT2zdEXLkw9uv3WL_QtQMa87BmkexlTtsQ-o0VtlxPgXZfm4bLCd6gYeykA5I-A1bUAPObHwjF1Ftg5pCZoZVQH7Szbs6d8W9KTKySTjc_hp7vXlDhV-TSumKeFjCOKMFKNO3FeFAr275IkXsa8MDglpRdHcCMCRpbFeJQu2A0tG_R0xsV3ZRExWkgT2jilOsJDObkjirFYQOpY6U3qB8jM1mIjrbcfBc9YcLnugBpdBxVeAbyPeBK0XQVFWDlWj64UxDYj3AakQ9v_qNnCAgxddAuT6UHiwa8c8RyxBGQVt55FQoNA5VDScJKcc8XwLiF_BQgoHXprgonFKpM=w612-h306-no?authuser=0">
+        </img>
     </body>
+
+    <style>
+        * {margin: 0; padding: 0;}
+        body {
+            background-color: rgb(134, 134, 134);
+            overflow-x: hidden;
+            overflow-y: hidden;
+        }
+
+        nav {
+            background-color: rgb(122, 122, 122);
+            padding: 1em; 
+            font-family: verdana;
+            box-shadow: 0px 7.5px 0px rgb(99, 99, 99);
+        }
+
+        a {
+            text-decoration: none;
+            color: rgb(196, 196, 196);
+            font-size: x-large;
+            font-weight: 700;
+        }
+
+        .bac-img {
+            width: 100%;
+            height: 100%;
+            opacity: 70%;
+        }
+    </style>
 </html>
