--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         }
 
         .bac-img {
-            width: 100%;
-            height: 100%;
+            display:block;
+            width:100%; 
+            height:100%;
+            object-fit: cover;
             opacity: 70%;
         }
     </style>
