--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
         }
 
         .bac-img {
-            display:block;
-            width:100%; 
-            height:100%;
-            object-fit: cover;
             opacity: 70%;
+            width:100%; 
+            height:92.95%;
+            position: fixed;
+            left: 0%;
+            top: 7.05%;
         }
     </style>
 </html>
