--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
         .bac-img {
             opacity: 70%;
-            width:100%; 
-            height:92.95%;
+            width:100vw; 
+            height:92.9vh;
             position: fixed;
             left: 0%;
-            top: 7.05%;
+            top: 7.1%;
         }
     </style>
 </html>
