--- a/Library.html
+++ b/Library.html
@@ -7,6 +7,62 @@
     </head>
 
     <body>
-        <p>finally :)</p>
+        <nav>
+            <a href="index" style="position: relative; left: 2.5%;">Home</a>
+            <a href="Library" style="position: relative; left: 10%;">Library</a>
+        </nav>
+
+        <div class="enterdiv">
+            <h1 class="enterinfo">Enter helper+ key</h1>
+            <input></input>
+        </div>
     </body>
+
+    <style>
+        * {margin: 0; padding: 0;}
+        body {
+            background-color: rgb(68, 68, 68);
+            overflow-x: hidden;
+            overflow-y: hidden;
+        }
+
+        nav {
+            background-color: rgb(59, 59, 59);
+            padding: 1em; 
+            font-family: verdana;
+            box-shadow: 0px 7.5px 0px rgb(36, 36, 36);
+        }
+
+        a {
+            text-decoration: none;
+            color: rgb(221, 221, 221);
+            font-size: x-large;
+            font-weight: 700;
+        }
+
+        input {
+            border-radius: 5px;
+            background-color: rgb(41, 41, 41);
+            color: rgb(211, 211, 211);
+            text-align: center;
+            height: 5%;
+        }
+
+        .enterdiv {
+            width: 50%;
+            height: 50%;
+            position: absolute;
+            left: 42.5%;
+            top: 50%;
+        }
+
+        .enterinfo {
+            font-family: verdana;
+            font-size: medium;
+            color: rgb(211, 211, 211);
+            position: relative;
+            left: 0.5%;
+            top: -2%;
+        }
+    </style>
 </html>
