--- a/Library.html
+++ b/Library.html
@@ -14,7 +14,7 @@
 
         <div class="enterdiv">
             <h1 class="enterinfo">Enter helper+ key</h1>
-            <input></input>
+            <input type="password" id="EnterKey"></input>
         </div>
     </body>
 
@@ -65,4 +65,6 @@
             top: -2%;
         }
     </style>
+
+    <script src="LibScript.js"></script>
 </html>
