--- a/LibraryInfo.html
+++ b/LibraryInfo.html
@@ -11,14 +11,18 @@
         <a href="index" style="position: relative; left: 2.5%;">Home</a>
         <a href="Library" style="position: relative; left: 10%;">Library</a>
     </nav>
+
+    <h3 style="position: absolute; top: 20%; left: 33.5%; font-size: 50px;">Create main window</h3>
+    <div style="position: absolute; left: 12.5%; top: 30%;">
+        <h3 style="top: 6.5%;"><span style="color:olivedrab">local </span>library = <span style="color:brown">loadstring</span>(game:HttpGet(<span style="color:darkcyan">'https://raw.githubusercontent.com/Lagendking/library-test/main/library.lua'</span>))()</h3>
+        <h3 style="top: 10.5%;"><span style="color:olivedrab">local </span>window = library:Init(<span style="color:darkcyan">""</span>, <span style="color:darkcyan">false</span>)</h3>
+    </div>
   </body>
   
   <style>
     * {margin: 0; padding: 0;}
     body {
         background-color: rgb(68, 68, 68);
-        overflow-x: hidden;
-        overflow-y: hidden;
     }
 
     nav {
@@ -33,6 +37,21 @@
         color: rgb(221, 221, 221);
         font-size: x-large;
         font-weight: 700;
+    }
+
+    div {
+        background-color: rgb(49, 49, 49);
+        width: 74.5%;
+        height: 35.5%;
+        border-radius: 5px;
+    }
+
+    h3 {
+        text-align: left;
+        font-family: verdana;
+        color: rgb(221, 221, 221);
+        position: relative;
+        left: 3.5%;
     }
   </style>
 </html>
