--- a/LibraryInfo.html
+++ b/LibraryInfo.html
@@ -37,6 +37,42 @@
         <h3 style="top: 30.5%;"><span style="color:gray">&emsp; -- Do something here</span></h3>
         <h3 style="top: 34.5%;"><span style="color:olivedrab">end</span>)</h3>
     </div>
+
+    <h3 style="position: absolute; top: 185%; width: 100%; font-size: 50px; text-align: center;">Create new toggle</h3>
+    <div style="position: absolute; left: 12.5%; top: 195%;">
+        <h3 style="top: 6.5%;"><span style="color:olivedrab">local </span>library = <span style="color:brown">loadstring</span>(game:HttpGet(<span style="color:darkcyan">'https://raw.githubusercontent.com/Lagendking/library-test/main/library.lua'</span>))()</h3>
+        <h3 style="top: 10.5%;"><span style="color:olivedrab">local </span>window = library:Init(<span style="color:darkcyan">""</span>, <span style="color:darkcyan">false</span>)</h3>
+        <h3 style="top: 14.5%;"></h3>
+        <h3 style="top: 18.5%;">win:newTab(<span style="color:darkcyan">"name"</span>)</h3>
+        <h3 style="top: 22.5%;"></h3>
+        <h3 style="top: 26.5%;">win:newToggle(<span style="color:darkcyan">"name"</span>, <span style="color:darkcyan">"tab name"</span>, <span style="color:olivedrab">function</span>(state)</h3>
+        <h3 style="top: 30.5%;"><span style="color:gray">&emsp; -- Do something here</span></h3>
+        <h3 style="top: 34.5%;"><span style="color:olivedrab">end</span>)</h3>
+    </div>
+
+    <h3 style="position: absolute; top: 240%; width: 100%; font-size: 50px; text-align: center;">Create new drop down</h3>
+    <div style="position: absolute; left: 12.5%; top: 250%;">
+        <h3 style="top: 6.5%;"><span style="color:olivedrab">local </span>library = <span style="color:brown">loadstring</span>(game:HttpGet(<span style="color:darkcyan">'https://raw.githubusercontent.com/Lagendking/library-test/main/library.lua'</span>))()</h3>
+        <h3 style="top: 10.5%;"><span style="color:olivedrab">local </span>window = library:Init(<span style="color:darkcyan">""</span>, <span style="color:darkcyan">false</span>)</h3>
+        <h3 style="top: 14.5%;"></h3>
+        <h3 style="top: 18.5%;">win:newTab(<span style="color:darkcyan">"name"</span>)</h3>
+        <h3 style="top: 22.5%;"></h3>
+        <h3 style="top: 26.5%;">win:newDrop(<span style="color:darkcyan">"name"</span>, <span style="color:darkcyan">"tab name"</span>, {<span style="color:darkcyan">"o1"</span>, <span style="color:darkcyan">"o2"</span>, <span style="color:darkcyan">"o3"</span>}, <span style="color:olivedrab">function</span>(choice)</h3>
+        <h3 style="top: 30.5%;"><span style="color:gray">&emsp; -- Do something here</span></h3>
+        <h3 style="top: 34.5%;"><span style="color:olivedrab">end</span>)</h3>
+    </div>
+
+    <h3 style="position: absolute; top: 295%; width: 100%; font-size: 50px; text-align: center;">Create new slider</h3>
+    <div style="position: absolute; left: 12.5%; top: 305%;">
+        <h3 style="top: 6.5%;"><span style="color:olivedrab">local </span>library = <span style="color:brown">loadstring</span>(game:HttpGet(<span style="color:darkcyan">'https://raw.githubusercontent.com/Lagendking/library-test/main/library.lua'</span>))()</h3>
+        <h3 style="top: 10.5%;"><span style="color:olivedrab">local </span>window = library:Init(<span style="color:darkcyan">""</span>, <span style="color:darkcyan">false</span>)</h3>
+        <h3 style="top: 14.5%;"></h3>
+        <h3 style="top: 18.5%;">win:newTab(<span style="color:darkcyan">"name"</span>)</h3>
+        <h3 style="top: 22.5%;"></h3>
+        <h3 style="top: 26.5%;">win:newSlide(<span style="color:darkcyan">"name"</span>, <span style="color:darkcyan">"tab name"</span>, <span style="color:darkcyan">1</span>, <span style="color:darkcyan">100</span>, <span style="color:olivedrab">function</span>(choice)</h3>
+        <h3 style="top: 30.5%;"><span style="color:gray">&emsp; -- Do something here</span></h3>
+        <h3 style="top: 34.5%;"><span style="color:olivedrab">end</span>)</h3>
+    </div>
   </body>
   
   <style>
@@ -48,7 +84,7 @@
 
     html, body {
         width: 100%;
-        height: 150%;
+        height: 190%;
         margin: 0;
         padding: 0;
     }
