added games page

--- a/Library.html
+++ b/Library.html
@@ -9,7 +9,8 @@
     <body>
         <nav>
             <a href="index" style="position: relative; left: 2.5%;">Home</a>
-            <a href="Library" style="position: relative; left: 10%;">Library</a>
+            <a href="Games" style="position: relative; left: 10%;">Games</a>
+            <a href="Library" style="position: relative; left: 17.5%;">Library</a>
         </nav>
 
         <div class="enterdiv">
