--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <body>
         <nav>
             <a href="index" style="position: relative; left: 2.5%;">Home</a>
-            <a href="Library" style="position: relative; left: 10%;">Library</a>
+            <a href="Games" style="position: relative; left: 10%;">Games</a>
+            <a href="Library" style="position: relative; left: 17.5%;">Library</a>
         </nav>
 
-        <h3 style="color: aliceblue; position: absolute; left: 20%; top: 50%; font-family: verdana; font-size: large;">Script: &nbsp;<span style="color: red;">loadstring</span><span style="color: rgb(170, 170, 170);">(game:HttpGet(</span><span style="color: mediumseagreen;">'https://raw.githubusercontent.com/Lagendking/Script/main/Script'</span><span style="color: rgb(170, 170, 170);">))()</span></h3>
+        <h3 style="color: aliceblue; position: absolute; left: 20%; top: 50%; font-family: verdana; font-size: large;">Script: &nbsp;<span style="color: brown;">loadstring</span><span style="color: rgb(170, 170, 170);">(game:HttpGet(</span><span style="color:darkcyan;">'https://raw.githubusercontent.com/Lagendking/Script/main/Script'</span><span style="color: rgb(170, 170, 170);">))()</span></h3>
     </body>
 
     <style>
