--- a/LibraryInfo.html
+++ b/LibraryInfo.html
@@ -7,9 +7,10 @@
   </head>
   
   <body>
-    <nav style="position: fixed; width: 100%; z-index: 999;">
+    <nav>
         <a href="index" style="position: relative; left: 2.5%;">Home</a>
-        <a href="Library" style="position: relative; left: 10%;">Library</a>
+        <a href="Games" style="position: relative; left: 10%;">Games</a>
+        <a href="Library" style="position: relative; left: 17.5%;">Library</a>
     </nav>
 
     <h3 style="position: absolute; top: 20%; width: 100%; font-size: 50px; text-align: center;">Create main window</h3>
