--- a/LibraryInfo.html
+++ b/LibraryInfo.html
@@ -16,7 +16,7 @@
     <h3 style="position: absolute; top: 20%; width: 100%; font-size: 50px; text-align: center;">Create main window</h3>
     <div style="position: absolute; left: 12.5%; top: 30%;">
         <h3 style="top: 6.5%;"><span style="color:olivedrab">local </span>library = <span style="color:brown">loadstring</span>(game:HttpGet(<span style="color:darkcyan">'https://raw.githubusercontent.com/Lagendking/library-test/main/library.lua'</span>))()</h3>
-        <h3 style="top: 10.5%;"><span style="color:olivedrab">local </span>window = library:Init(<span style="color:darkcyan">""</span>, <span style="color:darkcyan">false</span>)</h3>
+        <h3 style="top: 10.5%;"><span style="color:olivedrab">local </span>win = library:Init(<span style="color:darkcyan">""</span>, <span style="color:darkcyan">false</span>)</h3>
     </div>
 
     <h3 style="position: absolute; top: 75%; width: 100%; font-size: 50px; text-align: center;">Create new tab</h3>
